# NeonFlow

./: .gitignore  CMakeLists.txt  README.md  verify_build.bat
Core/: CMakeLists.txt  Game.cpp  Game.h  NeonPort.h
Core/ECS/: Component.h  Entity.h  System.h  World.h
Core/Logic/: GridLogic.cpp  GridLogic.h  RunnerLogic.cpp  RunnerLogic.h
Core/Renderer/: GeometryGenerator.cpp  GeometryGenerator.h  IRenderer.h  ShaderDefinitions.h
Core/Renderer/Shaders/: NeonFragment.glsl
Core/Systems/: GridPuzzleSystem.cpp  GridPuzzleSystem.h  MovementSystem.cpp  MovementSystem.h  RenderSystem.cpp  RenderSystem.h
Core/Tests/: TestPerformance.cpp  TestVisual.cpp
Platform/Android/: build.gradle  settings.gradle
Platform/Android/app/: build.gradle
Platform/Android/app/src/main/cpp/: native-lib.cpp
Platform/Android/app/src/main/java/com/antigravity/neonflow/: MainActivity.kt
Platform/iOS/: ViewController.swift
